# c

projects/c-lua/: main.c  meson.build  myLua.lua
projects/c-lua/include/: luaconf.h
projects/libcurl/: meson.build
projects/libcurl/src/: test_libcurl.c
projects/test-meson/: meson.build  testproject.c
projects/test-meson/include/: Person.h
